added new features

--- a/views/includes/flash.ejs
+++ b/views/includes/flash.ejs
@@ -1,3 +1,5 @@
+<!-- success is a array hence we have to check its length also else
+it will be alwaya true if we just check success -->
 <% if(success && success.length) { %>
 <div
   class="alert alert-success alert-dismissible fade show col-6 offset-3"
