--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,4 +1,8 @@
 <% layout("/layouts/boilerplate") %>
+<script>
+  let mapToken = "<%= process.env.MAP_TOKEN %>";
+  let listing = <%- JSON.stringify( listing )%>;
+</script>
 
 <div class="row mt-3">
   <div class="col-8 offset-3">
@@ -38,8 +42,8 @@
 <% } %>
 
 <div class="col-8 offset-3 mb-3">
-  <hr />
   <% if(currUser) { %>
+    <hr />
   <h4>Leave a review</h4>
   <form
     action="/listings/<%= listing._id %>/reviews"
@@ -101,10 +105,12 @@
   </form>
   <% } %>
 
-  <hr />
-  <h4>All Reviews</h4>
-
+  
+  
+  <% if(listing.reviews.length > 0) { %>
+    <hr />
   <div class="row">
+    <h4>All Reviews</h4>
     <% for (review of listing.reviews) { %>
     <div class="card col-5 ms-3 mb-3">
       <div class="card-body mb-3">
@@ -129,4 +135,12 @@
 
     <% } %>
   </div>
+  <% } %>
 </div>
+
+<div class="col-8 offset-3 mb-3">
+  <h3>Where you'll be</h3>
+  <div id="map"></div>
+</div>
+
+<script src="/js/map.js"></script>
